Adds network icons

--- a/index.html
+++ b/index.html
@@ -212,24 +212,34 @@
                 <h3 class="title">Ольга Иванова</h3>
                 <p class="profession">Frontend Developer</p>
                 <ul class="network list network-flex">
-                  <li>
-                    <a href="#" aria-label="Ссылка на Instagram" class="link"
-                      ><img src="./img/networks/instagram.svg" alt="Instagram"></a
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Instagram" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a
                     >
                   </li>
-                  <li>
+                  <li class="item-network">
                     <a href="#" aria-label="Ссылка на Twitter" class="link">
-                      <img src="./img/networks/twitter.svg" alt="Twitter"></a>
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на Facebook" class="link"
-                      ><img src="./img/networks/facebook.svg" alt="Facebook"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Facebook" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                      ><img src="./img/networks/linkedin.svg" alt="Inkedin"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на LinkedIn" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -246,24 +256,33 @@
                 <h3 class="title">Андрей Шевченко</h3>
                 <p class="profession">Marketing</p>
                 <ul class="network list network-flex">
-                  <li>
-                    <a href="#" aria-label="Ссылка на Instagram" class="link"
-                      ><img src="./img/networks/instagram.svg" alt="Instagram"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Instagram" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
+                  <li class="item-network">
                     <a href="#" aria-label="Ссылка на Twitter" class="link">
-                      <img src="./img/networks/twitter.svg" alt="Twitter"></a>
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на Facebook" class="link"
-                      ><img src="./img/networks/facebook.svg" alt="Facebook"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Facebook" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                      ><img src="./img/networks/linkedin.svg" alt="Inkedin"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на LinkedIn" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -280,25 +299,33 @@
                 <h3 class="title">Иван Николаев</h3>
                 <p class="profession">UI Designer</p>
                 <ul class="network list network-flex">
-                  <li>
-                    <a href="#" aria-label="Ссылка на Instagram" class="link"
-                      ><img src="./img/networks/instagram.svg" alt="Instagram"></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на Twitter" class="link">
-                      <img src="./img/networks/twitter.svg" alt="Twitter">
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Instagram" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-instagram"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на Facebook" class="link"
-                      ><img src="./img/networks/facebook.svg" alt="Facebook"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Twitter" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                      ><img src="./img/networks/linkedin.svg" alt="Inkedin"></a
-                    >
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на Facebook" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-network">
+                    <a href="#" aria-label="Ссылка на LinkedIn" class="link">
+                      <svg class="icon-network">
+                        <use href="./img/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -389,25 +416,33 @@
           <div class="join">
             <h4 class="footer-sign join-margin">Присоединяйтесь</h4>
             <ul class="network list footer-network">
-              <li>
-                <a href="#" aria-label="Ссылка на Instagram" class="link"
-                  >Ins</a
-                >
+              <li class="item-network">
+                <a href="#" aria-label="Ссылка на Instagram" class="link">
+                  <svg class="icon-network">
+                    <use href="./img/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ссылка на Twitter" class="link"
-                  >Tw</a
-                >
+              <li class="item-network">
+                <a href="#" aria-label="Ссылка на Twitter" class="link">
+                  <svg class="icon-network">
+                    <use href="./img/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ссылка на Facebook" class="link"
-                  >FB</a
-                >
+              <li class="item-network">
+                <a href="#" aria-label="Ссылка на Facebook" class="link">
+                  <svg class="icon-network">
+                    <use href="./img/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ссылка на LinkedIn" class="link"
-                  >LIn</a
-                >
+              <li class="item-network">
+                <a href="#" aria-label="Ссылка на LinkedIn" class="link">
+                  <svg class="icon-network">
+                    <use href="./img/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
