--- a/portfolio.html
+++ b/portfolio.html
@@ -284,19 +284,33 @@
           <div class="join">
             <h4 class="footer-sign join-margin">Присоединяйтесь</h4>
             <ul class="network list footer-network">
-              <li>
-                <a href="#" aria-label="Ссылка на Instagram" class="link"
-                  >Ins</a
-                >
+              <li class="item-network">
+                <a href="#" aria-label="Ссылка на Instagram" class="link">
+                  <svg class="icon-network">
+                    <use href="./img/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ссылка на Twitter" class="link">Tw</a>
+              <li class="item-network">
+                <a href="#" aria-label="Ссылка на Twitter" class="link">
+                  <svg class="icon-network">
+                    <use href="./img/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ссылка на Facebook" class="link">FB</a>
+              <li class="item-network">
+                <a href="#" aria-label="Ссылка на Facebook" class="link">
+                  <svg class="icon-network">
+                    <use href="./img/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a href="#" aria-label="Ссылка на LinkedIn" class="link">LIn</a>
+              <li class="item-network">
+                <a href="#" aria-label="Ссылка на LinkedIn" class="link">
+                  <svg class="icon-network">
+                    <use href="./img/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
